# vestaboard-ai

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yml  config.example.json  pyproject.toml  update-vestaboard-ai.sh
.claude/: TEAM_PROMPTS.md  launch-team.fish
.claude/agents/: security-reviewer.md
deploy/: README.md  nginx-vestaboard.corti.com.conf  vboard-scheduler.service  vboard-ui.service  vboard.service
docs/architecture/: architecture.md  data-flow.md  dataflow-diagram.mmd
docs/superpowers/plans/: 2026-06-26-vestaboard-ai.md
docs/superpowers/specs/: 2026-06-26-vestaboard-ai-design.md
src/vboard/: __init__.py  charset.py  config.py  daemon.py  delivery.py  device.py  history.py  llm.py  logging_setup.py  pipeline.py  vbml.py
src/vboard/ui/: app.py  pages_config.py  pages_history.py  pages_preview.py
tests/: test_charset.py  test_config.py  test_daemon.py  test_delivery.py  test_history.py  test_llm.py  test_logging_redaction.py  test_pipeline.py  test_vbml.py
