[project]
name = "vboard"
version = "0.1.0"
description = "LLM-generated messages delivered to a Vestaboard on a schedule"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "streamlit>=1.33",
    "streamlit-authenticator>=0.3.2",
    "bcrypt>=4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vboard"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
